# lpo-sales-engine

./: .env.example  .gitignore  README.md  middleware.ts  package-lock.json  package.json  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/api/health/: route.ts
app/components/: AppShell.tsx  DialerView.tsx  GroupedBarChart.tsx  HotListView.tsx  LookupView.tsx  RefreshButton.tsx  ScoreboardView.tsx  UserChip.tsx  VmPanel.tsx
app/dialer/: page.tsx
app/hot-list/: page.tsx
app/login/: page.tsx
app/lookup/: page.tsx
app/scoreboard/: page.tsx
companion/: SETUP.md  install.command  package-lock.json  package.json
companion/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
companion/src-tauri/capabilities/: default.json
companion/src-tauri/icons/: icon.icns
companion/src-tauri/permissions/: app-commands.toml
companion/src-tauri/src/: audio_setup.rs  main.rs
docs/: FRAMEWORK.md  ui-prototype.html
lib/: auth.ts  classify.ts  cron.ts  dialer.ts  env.ts  flag-phones.ts  hotlist.ts  identity.ts  klaviyo.ts  pipedrive.ts  quo-api.ts  quo.ts  scoreboard.ts  shopify.ts  supabase.ts
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 00001_init.sql  00002_rep_phone_numbers.sql  00003_pg_cron_reconcile.sql  00004_reconcile_hourly_window.sql  00005_quo_lines_and_messages.sql  00006_message_line_attribution.sql  00007_hotlist_phase2.sql  00008_match_attempt_cache.sql  00009_unique_active_flag.sql  00010_auth_roles.sql  00011_dial_skips.sql  00012_hot_flag_phone.sql  00013_reprospect_pool.sql
(+20 files in other folders)
